# glog_catkin

./: CMakeLists.txt  get-newest-config-guess.sh  package.xml  remove-files-generated-by-autotools.patch
cmake/: glog-catkin-extras.cmake.in  glog-extras.cmake.in
